Fix unit tests and add mockk workaround for spying on java.net.URL instances.