@@ -20,7 +20,8 @@ android {
 
     buildTypes {
         release {
-            version = android.defaultConfig.versionName // had to add this to get the version in the build
+            version = android.defaultConfig.versionName
+            // had to add this to get the version in the build
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -43,7 +44,18 @@ android {
         exclude 'META-INF/LGPL2.1'
     }
 
-    testOptions.unitTests.includeAndroidResources true
+    // Ref: https://stackoverflow.com/a/37593189
+    testOptions {
+        unitTests {
+            includeAndroidResources true
+            all {
+                // workaround for spying on java.net.URL in Http module
+                // Ref: https://mockk.io/doc/md/jdk16-access-exceptions.html
+                jvmArgs("--add-opens", "java.base/java.net=ALL-UNNAMED")
+            }
+        }
+    }
+
 }
 
 dependencies {
